Defect/Story Number: 	QC defect #81974 Description Of Defect/Story: 	TASC TDC : TASC Readiness 2015 - Form 2 Spanish Contents not Highlighted properly Who Did Code Review: 	Reviewed by Monarch Team Code Files Changes: 	accommodationPKG.js(OAS100), preview.css(OAS100) Impacted Areas/Regression Areas:	Highlighter for TE items. How The Issue Was Solved: 	Multiple changes have been done for highlighter: 	1. removeOrReduceHighlighterBox() is now applicable only for scrollable divs(passage area with vertical scrollbars.) 	2. Padding has been added to the highlighter div for resolving the issue of question area not getting highlighted properly. 	3. Answer area texts will be highlighted only if div with a text class has its attribute ansarea set to true. Hints To QA For Testing: 	1. Login into TAS as TASC Customer 	2. Schedule a Session for the Test : TASC Readiness Assessment - Spanish, Form 2 . 	3. Add a Student into it . 	4. Login into TDC for TASC with the Login Credentials for Social Studies Sub-Test 	5. Move to Question No. 11 	Observe that answer portion should be highlighted properly Developer Comments:	Since changes were to be made for  TE item ,the defect was fixed by Monarch Team. Subhankar Saha checked in the changes on behalf of Monarch team.
Defect/Story Number: 	QC defect #82000
Description Of Defect/Story: 	TASC TDC : TASC Readiness 2015 - Form 2 English Contents are not Highlighted properly
Who Did Code Review: 	Reviewed by Monarch Team
Code Files Changes: 	accommodationPKG.js(OAS100), preview.css(OAS100)
Impacted Areas/Regression Areas:	Highlighter for TE items.
How The Issue Was Solved: 	Multiple changes have been done for highlighter:
	1. removeOrReduceHighlighterBox() is now applicable only for scrollable divs(passage area with vertical scrollbars.)
	2. Padding has been added to the highlighter div for resolving the issue of question area not getting highlighted properly.
	3. Answer area texts will be highlighted only if div with a text class has its at

--- a/application-tdc/webapp/TECommonPkg/styles/css/preview.css
+++ b/application-tdc/webapp/TECommonPkg/styles/css/preview.css
@@ -470,3 +470,6 @@ input[type="checkbox"]:not(:checked) + .text:before, [type="checkbox"]:checked +
 #advanced_pt_34{
 	background-image : url("image/basicSymbol/advanced_pt_34.PNG")!important;
 }
+.text.no-user-select{
+		overflow-x:hidden;
+	}
